--- a/index.html
+++ b/index.html
@@ -509,7 +509,7 @@
         </section>
     </main>
 <!--Footer-->
-<!--<footer class="footer">
+<footer class="footer">
     <div class="container footer-container">
     <div class="footer-adress"> 
     <a class="logo" href="">Web<span class="logo__half">Studio</span></a> 
