--- a/portfolio.html
+++ b/portfolio.html
@@ -278,31 +278,31 @@
                     <source
                       media="(min-width: 1200px)"
                       srcset="
-                        ./images/pc/insipartion1х.jpg 1x,
-                        ./images/pc/insipartion2х.jpg 2x
+                        ./images/pc/inspiration1x.jpg 1x,
+                        ./images/pc/inspiration2x.jpg 2x
                       "
                       type="image/jpg"
                     />
                     <source
                       media="(min-width: 768px) and (max-width:1199px)"
                       srcset="
-                        ./images/tablet/insipartion1х.jpg 1x,
-                        ./images/tablet/insipartion2х.jpg 2x
+                        ./images/tablet/inspiration1х.jpg 1x,
+                        ./images/tablet/inspiration2х.jpg 2x
                       "
                       type="image/jpg"
                     />
                     <source
                       media="(max-width: 767px)"
                       srcset="
-                        ./images/mobile/insipartion1х.jpg 1x,
-                        ./images/mobile/insipartion2х.jpg 2x
+                        ./images/mobile/inspiration1х.jpg 1x,
+                        ./images/mobile/inspiration2х.jpg 2x
                       "
                       type="image/jpg"
                     />
 
                     <img
                       class="gallery__image"
-                      src="./images/insipartion.jpg"
+                      src="./images/inspiration.jpg"
                       alt="inspiration"
                     />
                   </picture>
