--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <!--Header-->
-   <!--<header class="header">
+   <header class="header">
     <div class="container header__container">
     <a class="logo" href="./index.html">Web<span class="logo__dark">Studio</span></a>
     <button 
@@ -39,7 +39,7 @@
        </ul>
     </nav>
     <!--Contacts-->
-    <!--<ul class="contacts-list">
+    <ul class="contacts-list">
         <li class="contacts-list__item"><a class="contacts-list__link" href="mailto:info@devstudio.com">
             <svg class="contacts-list__icon" width="16" height="12"> 
             <use href="./images/sprite.svg#icon-mail"></use>
