--- a/index.html
+++ b/index.html
@@ -51,7 +51,22 @@
         </use>
         </svg>
        +38 096 111 11 11</a></li>
-    </ul>   
+    </ul>  
+    <ul class="menu">
+        <li class="menu__item">
+          <a href="" class="menu__link">Instagram</a>
+        </li>
+        <li class="menu__item"><span class="menu__line"></span></li>
+        <li class="menu__item">
+          <a href="" class="menu__link">Twitter</a>
+        </li>
+        <li class="menu__item"><span class="menu__line"></span></li>
+        <li class="menu__item">
+          <a href="" class="menu__link">Facebook</a>
+        </li>
+        <li class="menu__item"><span class="menu__line"></span></li>
+        <li class="menu__item">
+          <a href="" class="menu__link">Linkedin</a> 
     </div>
    </header> 
 <!--main information-->
