--- a/portfolio.html
+++ b/portfolio.html
@@ -17,7 +17,7 @@
     <nav class="navigate">
        <ul class="navigate__list">
             <li class="navigate__item"><a href="index.html"        class="navigate__link" >Студия</a></li>
-            <li class="navigate__item"><a href="./portfolio.html"  class="navigate__link current">Портфолио</a></li>
+            <li class="navigate__item"><a href="./portfolio.html"  class="navigate__link--current">Портфолио</a></li>
             <li class="navigate__item"><a href=""                  class="navigate__link">Контакты </a></li>
        </ul>
     </nav>
