--- a/index.html
+++ b/index.html
@@ -16,21 +16,18 @@
     <a class="logo" href="./index.html">Web<span class="logo__dark">Studio</span></a>
 
 
-
-
-    <button 
-        class="menu-button is-open"
-        type="button"
-        aria-expanded="false">
+    <button
+    class="menu-button js-open-menu"
+    type="button"
+    aria-expanded="false">         
             <svg class="menu-icon"
-             width="40" 
-             height="40" 
+             width="24" 
+             height="16" 
              aria-label="Переключатель мобильного меню">
                 <use class="menu-open"  href="./images/sprite.svg#icon-open-menu"></use>
-                <use class="menu-close" href="./images/sprite.svg#icon-close_menu"></use>
             </svg>
     </button>
-   <!-- <div class="mobile-menu js-menu-container">
+   <div class="mobile-menu js-menu-container">
         <button
           class="mobile-menu__close js-close-menu"
           type="button"
@@ -39,8 +36,9 @@
             <use class="menu-close" href="./images/sprite.svg#icon-close_menu"></use>
           </svg> 
         </button>
-    </div> -->
+    </div>
 
+    
     <div>
     <nav class="navigate">
        <ul class="navigate__list">
@@ -63,25 +61,23 @@
        +38 096 111 11 11</a></li>
     </ul>  
 </div>
-
-    <ul class="menu">
-        <li class="menu__item">
-          <a href="" class="menu__link">Instagram</a>
-        </li>
-        <li class="menu__item"><span class="menu__sign"></span></li>
-        <li class="menu__item">
-          <a href="" class="menu__link">Twitter</a>
-        </li>
-        <li class="menu__item"><span class="menu__sign"></span></li>
-        <li class="menu__item">
-          <a href="" class="menu__link">Facebook</a>
-        </li>
-        <li class="menu__item"><span class=""menu__sign"></span></li>
-        <li class="menu__item">
-          <a href="" class="menu__link">Linkedin</a> 
-          </li>
-          </ul>
-
+<ul class="menu">
+    <li class="menu__item">
+      <a href="" class="menu__link">Instagram</a>
+    </li>
+    <li class="menu__item"><span class="menu__sign"></span></li>
+    <li class="menu__item">
+      <a href="" class="menu__link">Twitter</a>
+    </li>
+    <li class="menu__item"><span class="menu__sign"></span></li>
+    <li class="menu__item">
+      <a href="" class="menu__link">Facebook</a>
+    </li>
+    <li class="menu__item"><span class="menu__sign"></span></li>
+    <li class="menu__item">
+      <a href="" class="menu__link">Linkedin</a>
+    </li>
+  </ul>
 
     </div>
    </header> 
