--- a/index.html
+++ b/index.html
@@ -14,25 +14,16 @@
    <header class="header">
     <div class="container header__container">
     <a class="logo" href="./index.html">Web<span class="logo__dark">Studio</span></a>
-
-
-    <button
-    class="menu-button js-open-menu"
-    type="button"
-    aria-expanded="false">         
-            <svg class="menu-icon"
-             width="24" 
-             height="16" 
-             aria-label="Переключатель мобильного меню">
+    
+    <button type="button" class="menu_open-btn">
+        <svg class="menu_open-icon" width="40" height="40">
                 <use class="menu-open"  href="./images/sprite.svg#icon-open-menu"></use>
             </svg>
     </button>
-   <div class="mobile-menu js-menu-container">
-        <button
-          class="mobile-menu__close js-close-menu"
-          type="button"
-          aria-expanded="false">
-          <svg class="menu-icon" width="19" height="19" aria-label="Меню">
+    <div class="mobile-menu is-hidden">
+        <div class="container menu-container">
+            <button type="button" class="menu_close-btn">
+                <svg class="menu_close-icon" width="40" height="40">
             <use class="menu-close" href="./images/sprite.svg#icon-close_menu"></use>
           </svg> 
         </button>
@@ -57,28 +48,25 @@
                 </svg>
                +38 096 111 11 11</a></li>
             </ul>  
+            <ul class="menu">
+                <li class="menu__item">
+                  <a href="" class="menu__link">Instagram</a>
+                </li>
+                <li class="menu__item"><span class="menu__sign"></span></li>
+                <li class="menu__item">
+                  <a href="" class="menu__link">Twitter</a>
+                </li>
+                <li class="menu__item"><span class="menu__sign"></span></li>
+                <li class="menu__item">
+                  <a href="" class="menu__link">Facebook</a>
+                </li>
+                <li class="menu__item"><span class="menu__sign"></span></li>
+                <li class="menu__item">
+                  <a href="" class="menu__link">Linkedin</a>
+                </li>
+              </ul>
         </div>
     </div>
-
-    
-<ul class="menu">
-    <li class="menu__item">
-      <a href="" class="menu__link">Instagram</a>
-    </li>
-    <li class="menu__item"><span class="menu__sign"></span></li>
-    <li class="menu__item">
-      <a href="" class="menu__link">Twitter</a>
-    </li>
-    <li class="menu__item"><span class="menu__sign"></span></li>
-    <li class="menu__item">
-      <a href="" class="menu__link">Facebook</a>
-    </li>
-    <li class="menu__item"><span class="menu__sign"></span></li>
-    <li class="menu__item">
-      <a href="" class="menu__link">Linkedin</a>
-    </li>
-  </ul>
-
     </div>
    </header> 
 <!--main information-->
