--- a/index.html
+++ b/index.html
@@ -15,15 +15,37 @@
     <div class="container header__container">
     <a class="logo" href="./index.html">Web<span class="logo__dark">Studio</span></a>
     
-    <button type="button" class="menu_open">
-        <svg class="menu_open-icon"
-         width="40" 
-         height="40"
+<nav> 
+    <button 
+    type="button"
+     class="menu_button"
+     aria-expanded="false"
+     data-menu-button>
+        <svg
+         width="24" 
+         height="16"
          aria-label="Переключатель мобильного меню">
-                <use class="icon-menu"  href="./images/sprite.svg#icon-open-menu"></use>
-                <use class="icon-cross" href="./images/sprite.svg#icon-close_menu"></use>
+
+                <use class="icon-menu"  href="./images/sprite.svg#icon-menu_24px"></use>
+                <use class="icon-cross" href="./images/sprite.svg#icon-close_24px"></use>
+
             </svg>
     </button>
+    <div class="menu-container">
+
+    </div>
+</nav>
+
+
+
+
+
+
+
+
+
+
+
             <nav class="navigate">
                <ul class="navigate__list">
                     <li class="navigate__item"><a href="index.html"        class="navigate__link navigate__link--current" >Студия</a></li>
