--- a/index.html
+++ b/index.html
@@ -13,32 +13,8 @@
     <!--Header-->
    <header class="header">
     <div class="container header__container">
-    <nav> 
-    <a class="logo" href="./index.html">Web<span class="logo__dark">Studio</span></a>
-    
-
-    <button 
-    type="button"
-     class="menu_button"
-     aria-expanded="false"
-     aria-controls="menu-container"
-     data-menu-button>
-        <svg
-         width="24" 
-         height="16"
-         aria-label="Переключатель мобильного меню">
-
-                <use class="icon-menu"  href="./images/sprite.svg#icon-menu_24px"></use>
-                <use class="icon-cross" href="./images/sprite.svg#icon-close_24px"></use>
-
-            </svg>
-    </button>
-    <div class="menu-container" id="menu-container" data-menu>
-        Контент меню
-    </div>
-</nav>
-
             <nav class="navigate">
+                <a class="logo" href="./index.html">Web<span class="logo__dark">Studio</span></a>
                <ul class="navigate__list">
                     <li class="navigate__item"><a href="index.html"        class="navigate__link navigate__link--current" >Студия</a></li>
                     <li class="navigate__item"><a href="./portfolio.html"  class="navigate__link">Портфолио</a></li>
@@ -58,23 +34,58 @@
                 </svg>
                +38 096 111 11 11</a></li>
             </ul>  
-            <ul class="menu">
-                <li class="menu__item">
-                  <a href="" class="menu__link">Instagram</a>
-                </li>
-                <li class="menu__item"><span class="menu__sign"></span></li>
-                <li class="menu__item">
-                  <a href="" class="menu__link">Twitter</a>
-                </li>
-                <li class="menu__item"><span class="menu__sign"></span></li>
-                <li class="menu__item">
-                  <a href="" class="menu__link">Facebook</a>
-                </li>
-                <li class="menu__item"><span class="menu__sign"></span></li>
-                <li class="menu__item">
-                  <a href="" class="menu__link">Linkedin</a>
-                </li>
-              </ul>
+            <button type="button" class="menu_open-btn">
+                <svg class="menu_open-icon" width="40" height="40">
+                    <use href="./images/icons.svg#icon-menu_24px"></use>
+                </svg>
+            </button>
+            <div class="mobile-menu is-hidden">
+                <div class="container menu-container">
+                    <button type="button" class="menu_close-btn">
+                        <svg class="menu_close-icon" width="40" height="40">
+                            <use href="./images/icons.svg#icon-close_24px"></use>
+                        </svg>
+                    </button>
+                    <div class="menu-top">
+                        <ul class="list mobile-menu-list">
+                            <li class="mobile-menu-list__item">
+                                <a class="link mobile-menu__link active" href="index.html">Студия</a>
+                            </li>
+                            <li class="mobile-menu-list__item">
+                                <a class="link mobile-menu__link" href="portfolio.html">Портфолио</a>
+                            </li>
+                            <li class="mobile-menu-list__item">
+                                <a class="link mobile-menu__link" href="">Контакты</a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="menu-button">
+                        <ul class="contacts-mobile list">
+                            <li class="contacts-mobile__item">
+                                <a class="contact-mobile__tel link" href="tel:+380961111111">
+                                    +38 096 111 11 11</a>
+                            </li>
+                            <li class="contacts-mobile__item">
+                                <a class="contact-mobile__mail link" href="mailto:info@devstudio.com">
+                                    info@devstudio.com</a>
+                            </li>
+                        </ul>
+                        <ul class="socials-menu list">
+                            <li class="socials-menu__item">
+                                <a href="" class="socials-menu__link link"> Instagram </a>
+                            </li>
+                            <li class="socials-menu__item">
+                                <a href="" class="link socials-menu__link"> Twitter </a>
+                            </li>
+                            <li class="socials-menu__item">
+                                <a href="" class="socials-menu__link link"> Facebook </a>
+                            </li>
+                            <li class="socials-menu__item">
+                                <a href="" class="socials-menu__link link"> LinkedIn </a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
         </div>
     </div>
     </div>
