--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           type="button"
           aria-expanded="false"
         >
-                <svg class="menu-icon" width="40" height="40">
+                <svg class="menu-icon" width="24" height="16">
                     <use href="./images/icons.svg#icon-menu_24px"></use>
                 </svg>
             </button>
@@ -33,7 +33,7 @@
                             <use href="./images/icons.svg#icon-close_24px"></use>
                         </svg>
                     </button>
-                    <nav class="navigate"></nav>
+                <nav class="navigate">
                <ul class="navigate__list">
                     <li class="navigate__item"><a href="index.html"        class="navigate__link navigate__link--current" >Студия</a></li>
                     <li class="navigate__item"><a href="./portfolio.html"  class="navigate__link">Портфолио</a></li>
