--- a/portfolio.html
+++ b/portfolio.html
@@ -33,13 +33,13 @@
                             <use href="./images/icons.svg#icon-close_24px"></use>
                         </svg>
                     </button>
-                    <nav class="navigate"></nav>
+                    <nav class="navigate">
                <ul class="navigate__list">
                     <li class="navigate__item"><a href="index.html"        class="navigate__link" >Студия</a></li>
                     <li class="navigate__item"><a href="./portfolio.html"  class="navigate__link navigate__link--current">Портфолио</a></li>
                     <li class="navigate__item"><a href=""                  class="navigate__link">Контакты </a></li>
                </ul>
-            </nav>
+             </nav>
             <ul class="contacts-list">
                 <li class="contacts-list__item"><a class="contacts-list__link" href="mailto:info@devstudio.com">
                     <svg class="contacts-list__icon" width="16" height="12"> 
