--- a/portfolio.html
+++ b/portfolio.html
@@ -41,18 +41,18 @@
                </ul>
             </nav>
             <ul class="contacts-list">
-                <li class="contacts-list__item"><a class="contacts-list__link" href="mailto:info@devstudio.com">
-                    <svg class="contacts-list__icon" width="16" height="12"> 
-                    <use href="./images/sprite.svg#icon-mail"></use>
-                    </svg>info@devstudio.com</a></li>
-                <li class="contacts-list__item"><a class="contacts-list__link" href="tel:+380961111111">
-                    <svg class="contacts-list__icon" width="10" height="16">
-                <use
-                 href="./images/sprite.svg#icon-phone">
-                </use>
-                </svg>
-               +38 096 111 11 11</a></li>
-            </ul>  
+              <li class="contacts-list__item"><a class="contacts-list__link mail" href="mailto:info@devstudio.com">
+                  <svg class="contacts-list__icon" width="16" height="12"> 
+                  <use href="./images/sprite.svg#icon-mail"></use>
+                  </svg>info@devstudio.com</a></li>
+              <li class="contacts-list__item"><a class="contacts-list__link number" href="tel:+380961111111">
+                  <svg class="contacts-list__icon" width="10" height="16">
+              <use
+               href="./images/sprite.svg#icon-phone">
+              </use>
+              </svg>
+             +38 096 111 11 11</a></li>
+          </ul>  
             <ul class="menu">
                 <li class="menu__item">
                   <a href="" class="menu__link">Instagram</a>
